fixed card body sizing issue on mobile

--- a/assets/css/content.css
+++ b/assets/css/content.css
@@ -100,9 +100,8 @@
 .has-content .product-card .card-body
 {
     padding: 1em 0;
-    margin-left: 92px;
-    width: 84%;
-    text-align: left;
+    width: 100%;
+    text-align: center;
     font-size: 1.1rem;
     line-height: 1.8rem;
     color: var(--n-dark-grayish-blue);
